@@ -34,4 +34,4 @@ typedef int32_t sample_id_t;
 // remains small, any type of heap allocation is a waste, so we use
 // this to create stack arrays:
 //
-enum { MAX_SAMPLE=4 };
+enum { MAX_SAMPLE=6 };
