@@ -54,9 +54,9 @@ You must specify BAM or CRAM file(s) for the proband and additional related samp
         group.add_option("--probandAlignment", type="string",dest="probandBamList",metavar="FILE", action="append",
                          help="Proband BAM or CRAM file. [required] (no default)")
         group.add_option("--parentAlignment", type="string",dest="parentBamList",metavar="FILE", action="append",
-                          help="BAM or CRAM file for a parent sample. (no default, submit argument one time for each parent)")
+                         help="BAM or CRAM file for a parent sample. (no default, submit argument one time for each parent)")
         group.add_option("--siblingAlignment", type="string",dest="siblingBamList",metavar="FILE", action="append",
-                          help="BAM or CRAM file for a sibling sample. (no default, submit argument one time for each sibling)")
+                         help="BAM or CRAM file for a sibling sample. (no default, submit argument one time for each sibling)")
         group.add_option("--isWriteCallableRegion", action="store_true",
                          help="Write out a bed file describing de-novo callable regions of the genome")
 
@@ -84,7 +84,7 @@ You must specify BAM or CRAM file(s) for the proband and additional related samp
         StarkaWorkflowOptionsBase.validateAndSanitizeExistingOptions(self,options)
         groomBamList(options.probandBamList,"proband sample")
         groomBamList(options.parentBamList, "parent sample")
-        groomBamList(options.siblingBamList, "siblin sample")
+        groomBamList(options.siblingBamList, "sibling sample")
 
 
 
