@@ -1,3 +1,4 @@
+- STREL-75 fix sample limit in pedicure
 - STREL-118 relax MMDF using short haplotyping
 v2.5.0
 - STREL-138 adjust indel theta based on hpol context in germline model
